--- a/PruebasSoftware/4.2EjercicioProgramacion1/CalcularEstadisticas/computeStatistics.ipynb
+++ b/PruebasSoftware/4.2EjercicioProgramacion1/CalcularEstadisticas/computeStatistics.ipynb
@@ -38,7 +38,7 @@
       "metadata": {
         "id": "V-cZtB3H9RZh"
       },
-      "execution_count": 62,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "GHPZsU9k9pvy"
       },
-      "execution_count": 63,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "d1gPoGWc-Bje"
       },
-      "execution_count": 64,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "nvRPjQHw-H1V"
       },
-      "execution_count": 65,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "DHSVLach-Vnc"
       },
-      "execution_count": 66,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "5KsZu_MgAlj3"
       },
-      "execution_count": 67,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "Km0aAxDC-ete"
       },
-      "execution_count": 68,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
       "metadata": {
         "id": "57MGOFb3AwYu"
       },
-      "execution_count": 69,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -272,9 +272,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k0piYMElIbpX",
-        "outputId": "e526ed20-448f-403e-9167-25d65b2f5737"
+        "outputId": "2f72dcad-a54c-4e8a-f9ef-e64a1ddc8bdc"
       },
-      "execution_count": 70,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,6 +307,94 @@
             "Ignoring invalid data: ABBA\n",
             "Ignoring invalid data: ERROR\n",
             "Media: 2.474673954997149e+20, Mediana: 2.4664097307429e+20, Moda: 1.57638329490099e+20, Desviación Estándar: 1.4460564700984703e+20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time\n",
+        "import os\n",
+        "from datetime import datetime\n",
+        "\n",
+        "def main():\n",
+        "    start_time = time.time()\n",
+        "\n",
+        "    # Define la ruta base a tus archivos\n",
+        "    base_path = '/content/CalidadSoftware'\n",
+        "    file_names = ['TC1.txt', 'TC2.txt', 'TC3.txt', 'TC4.txt', 'TC5.txt', 'TC6.txt', 'TC7.txt']\n",
+        "\n",
+        "    # Preparar los encabezados para los resultados\n",
+        "    headers = [\"TC\", \"COUNT\", \"MEAN\", \"MEDIAN\", \"MODE\", \"SD\", \"VAR\", \"Elapsed Time\", \"Timestamp\"]\n",
+        "    file_results = []\n",
+        "\n",
+        "    # Procesar cada archivo\n",
+        "    for file_name in file_names:\n",
+        "        file_path = os.path.join(base_path, file_name)\n",
+        "        print(f\"Procesando {file_name}...\")\n",
+        "\n",
+        "        # Llama aquí a tus funciones de procesamiento de datos\n",
+        "        # Por ejemplo: data = read_data_from_file(file_path)\n",
+        "        # mean, median, mode, std_dev = tus funciones de cálculo de estadísticas\n",
+        "\n",
+        "        # Simula resultados (reemplaza con tus cálculos reales)\n",
+        "        result = [file_name, len(data), mean, median, mode, std_dev, \"variance\", time.time() - start_time, datetime.now()]\n",
+        "        file_results.append(result)\n",
+        "\n",
+        "    # Mostrar y guardar los resultados\n",
+        "    for row in file_results:\n",
+        "        print('\\t'.join(map(str, row)))\n",
+        "\n",
+        "    # Al final de tu función main, donde guardas los resultados\n",
+        "    result_file_path = os.path.join(base_path, 'StatisticsResults.txt')\n",
+        "\n",
+        "    with open(result_file_path, 'w', encoding='utf-8') as f:\n",
+        "        # Escribir los encabezados\n",
+        "        f.write('\\t'.join(headers) + '\\n')\n",
+        "        # Escribir los datos\n",
+        "        for row in file_results:\n",
+        "            f.write('\\t'.join(map(str, row)) + '\\n')\n",
+        "    print(f\"Results saved to {result_file_path}\")\n",
+        "\n",
+        "    # Medir y mostrar el tiempo transcurrido\n",
+        "    elapsed_time = time.time() - start_time\n",
+        "    print(f\"Tiempo total transcurrido: {elapsed_time} segundos.\")\n",
+        "\n",
+        "# Ejecutar la función principal\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
+      "metadata": {
+        "id": "E6pgrvzg0MA5",
+        "outputId": "de96ba0e-d83e-4fe3-e4de-c6f31ea0c46b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Procesando TC1.txt...\n",
+            "Procesando TC2.txt...\n",
+            "Procesando TC3.txt...\n",
+            "Procesando TC4.txt...\n",
+            "Procesando TC5.txt...\n",
+            "Procesando TC6.txt...\n",
+            "Procesando TC7.txt...\n",
+            "TC1.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t8.7738037109375e-05\t2024-02-05 01:19:37.421913\n",
+            "TC2.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.00013446807861328125\t2024-02-05 01:19:37.421958\n",
+            "TC3.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.00016736984252929688\t2024-02-05 01:19:37.421991\n",
+            "TC4.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.0006127357482910156\t2024-02-05 01:19:37.422437\n",
+            "TC5.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.0006425380706787109\t2024-02-05 01:19:37.422466\n",
+            "TC6.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.0006616115570068359\t2024-02-05 01:19:37.422485\n",
+            "TC7.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.0006794929504394531\t2024-02-05 01:19:37.422503\n",
+            "URL: /content/CalidadSoftware\n",
+            "Results saved to /content/CalidadSoftware/StatisticsResults.txt\n",
+            "Tiempo total transcurrido: 0.010835886001586914 segundos.\n"
           ]
         }
       ]
