--- a/PruebasSoftware/4.2EjercicioProgramacion1/CalcularEstadisticas/computeStatistics.ipynb
+++ b/PruebasSoftware/4.2EjercicioProgramacion1/CalcularEstadisticas/computeStatistics.ipynb
@@ -38,7 +38,7 @@
       "metadata": {
         "id": "V-cZtB3H9RZh"
       },
-      "execution_count": 74,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "GHPZsU9k9pvy"
       },
-      "execution_count": 75,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "d1gPoGWc-Bje"
       },
-      "execution_count": 76,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "nvRPjQHw-H1V"
       },
-      "execution_count": 77,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "DHSVLach-Vnc"
       },
-      "execution_count": 78,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "5KsZu_MgAlj3"
       },
-      "execution_count": 79,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "Km0aAxDC-ete"
       },
-      "execution_count": 80,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
       "metadata": {
         "id": "57MGOFb3AwYu"
       },
-      "execution_count": 81,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -272,9 +272,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k0piYMElIbpX",
-        "outputId": "2f72dcad-a54c-4e8a-f9ef-e64a1ddc8bdc"
+        "outputId": "fc9d7353-1049-4f51-9e60-243bd59a4c4e"
       },
-      "execution_count": 82,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,12 +367,12 @@
       ],
       "metadata": {
         "id": "E6pgrvzg0MA5",
-        "outputId": "de96ba0e-d83e-4fe3-e4de-c6f31ea0c46b",
+        "outputId": "1677840a-52c7-400d-d06a-2200cc91d528",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 86,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,16 +385,55 @@
             "Procesando TC5.txt...\n",
             "Procesando TC6.txt...\n",
             "Procesando TC7.txt...\n",
-            "TC1.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t8.7738037109375e-05\t2024-02-05 01:19:37.421913\n",
-            "TC2.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.00013446807861328125\t2024-02-05 01:19:37.421958\n",
-            "TC3.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.00016736984252929688\t2024-02-05 01:19:37.421991\n",
-            "TC4.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.0006127357482910156\t2024-02-05 01:19:37.422437\n",
-            "TC5.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.0006425380706787109\t2024-02-05 01:19:37.422466\n",
-            "TC6.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.0006616115570068359\t2024-02-05 01:19:37.422485\n",
-            "TC7.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.0006794929504394531\t2024-02-05 01:19:37.422503\n",
-            "URL: /content/CalidadSoftware\n",
+            "TC1.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.00011301040649414062\t2024-02-05 01:50:25.940450\n",
+            "TC2.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.00016045570373535156\t2024-02-05 01:50:25.940487\n",
+            "TC3.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.00019216537475585938\t2024-02-05 01:50:25.940518\n",
+            "TC4.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.00021982192993164062\t2024-02-05 01:50:25.940545\n",
+            "TC5.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.0002465248107910156\t2024-02-05 01:50:25.940573\n",
+            "TC6.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.00027489662170410156\t2024-02-05 01:50:25.940600\n",
+            "TC7.txt\t12767\t2.474673954997149e+20\t2.4664097307429e+20\t1.57638329490099e+20\t1.4460564700984703e+20\tvariance\t0.0003018379211425781\t2024-02-05 01:50:25.940627\n",
             "Results saved to /content/CalidadSoftware/StatisticsResults.txt\n",
-            "Tiempo total transcurrido: 0.010835886001586914 segundos.\n"
+            "Tiempo total transcurrido: 0.013869762420654297 segundos.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pasos para Analizar y Ajustar tu Código con PEP 8"
+      ],
+      "metadata": {
+        "id": "XD2PgLam5Do2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pylint\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1tve_Wyr5ExA",
+        "outputId": "c6b4bcdf-ca2c-4297-df03-08b711e588be"
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pylint in /usr/local/lib/python3.10/dist-packages (3.0.3)\n",
+            "Requirement already satisfied: platformdirs>=2.2.0 in /usr/local/lib/python3.10/dist-packages (from pylint) (4.2.0)\n",
+            "Requirement already satisfied: astroid<=3.1.0-dev0,>=3.0.1 in /usr/local/lib/python3.10/dist-packages (from pylint) (3.0.3)\n",
+            "Requirement already satisfied: isort!=5.13.0,<6,>=4.2.5 in /usr/local/lib/python3.10/dist-packages (from pylint) (5.13.2)\n",
+            "Requirement already satisfied: mccabe<0.8,>=0.6 in /usr/local/lib/python3.10/dist-packages (from pylint) (0.7.0)\n",
+            "Requirement already satisfied: tomlkit>=0.10.1 in /usr/local/lib/python3.10/dist-packages (from pylint) (0.12.3)\n",
+            "Requirement already satisfied: dill>=0.2 in /usr/local/lib/python3.10/dist-packages (from pylint) (0.3.8)\n",
+            "Requirement already satisfied: tomli>=1.1.0 in /usr/local/lib/python3.10/dist-packages (from pylint) (2.0.1)\n",
+            "Requirement already satisfied: typing-extensions>=4.0.0 in /usr/local/lib/python3.10/dist-packages (from astroid<=3.1.0-dev0,>=3.0.1->pylint) (4.5.0)\n"
           ]
         }
       ]
@@ -405,6 +444,94 @@
       "metadata": {
         "id": "ZeGFxkkmIY_3"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Una vez que se tiene el script en un archivo .py, se puede usar pylint para analizarlo, ejecutando el siguiente comando:"
+      ],
+      "metadata": {
+        "id": "ZAYNqLYs6nS6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pylint /content/CalidadSoftware/mi_script.py\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mkdPqk9t6ztC",
+        "outputId": "2129ff95-45c5-45af-83e6-58459dae1ba0"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "************* Module mi_script\n",
+            "CalidadSoftware/mi_script.py:12:0: C0303: Trailing whitespace (trailing-whitespace)\n",
+            "CalidadSoftware/mi_script.py:18:0: C0303: Trailing whitespace (trailing-whitespace)\n",
+            "CalidadSoftware/mi_script.py:29:0: W0311: Bad indentation. Found 1 spaces, expected 4 (bad-indentation)\n",
+            "CalidadSoftware/mi_script.py:33:0: W0311: Bad indentation. Found 1 spaces, expected 4 (bad-indentation)\n",
+            "CalidadSoftware/mi_script.py:34:0: W0311: Bad indentation. Found 1 spaces, expected 4 (bad-indentation)\n",
+            "CalidadSoftware/mi_script.py:35:0: W0311: Bad indentation. Found 5 spaces, expected 8 (bad-indentation)\n",
+            "CalidadSoftware/mi_script.py:36:0: W0311: Bad indentation. Found 1 spaces, expected 4 (bad-indentation)\n",
+            "CalidadSoftware/mi_script.py:37:0: W0311: Bad indentation. Found 1 spaces, expected 4 (bad-indentation)\n",
+            "CalidadSoftware/mi_script.py:38:0: W0311: Bad indentation. Found 1 spaces, expected 4 (bad-indentation)\n",
+            "CalidadSoftware/mi_script.py:42:0: W0311: Bad indentation. Found 1 spaces, expected 4 (bad-indentation)\n",
+            "CalidadSoftware/mi_script.py:43:0: W0311: Bad indentation. Found 1 spaces, expected 4 (bad-indentation)\n",
+            "CalidadSoftware/mi_script.py:63:0: C0303: Trailing whitespace (trailing-whitespace)\n",
+            "CalidadSoftware/mi_script.py:66:0: C0303: Trailing whitespace (trailing-whitespace)\n",
+            "CalidadSoftware/mi_script.py:78:0: C0303: Trailing whitespace (trailing-whitespace)\n",
+            "CalidadSoftware/mi_script.py:81:0: C0303: Trailing whitespace (trailing-whitespace)\n",
+            "CalidadSoftware/mi_script.py:133:0: C0301: Line too long (122/100) (line-too-long)\n",
+            "CalidadSoftware/mi_script.py:157:0: C0304: Final newline missing (missing-final-newline)\n",
+            "CalidadSoftware/mi_script.py:1:0: C0114: Missing module docstring (missing-module-docstring)\n",
+            "CalidadSoftware/mi_script.py:9:0: C0103: Constant name \"base_path\" doesn't conform to UPPER_CASE naming style (invalid-name)\n",
+            "CalidadSoftware/mi_script.py:11:0: C0116: Missing function or method docstring (missing-function-docstring)\n",
+            "CalidadSoftware/mi_script.py:11:19: W0621: Redefining name 'data' from outer scope (line 97) (redefined-outer-name)\n",
+            "CalidadSoftware/mi_script.py:16:0: C0116: Missing function or method docstring (missing-function-docstring)\n",
+            "CalidadSoftware/mi_script.py:16:21: W0621: Redefining name 'data' from outer scope (line 97) (redefined-outer-name)\n",
+            "CalidadSoftware/mi_script.py:27:0: C0116: Missing function or method docstring (missing-function-docstring)\n",
+            "CalidadSoftware/mi_script.py:27:23: W0621: Redefining name 'data' from outer scope (line 97) (redefined-outer-name)\n",
+            "CalidadSoftware/mi_script.py:27:29: W0621: Redefining name 'mean' from outer scope (line 100) (redefined-outer-name)\n",
+            "CalidadSoftware/mi_script.py:31:0: C0116: Missing function or method docstring (missing-function-docstring)\n",
+            "CalidadSoftware/mi_script.py:31:19: W0621: Redefining name 'data' from outer scope (line 97) (redefined-outer-name)\n",
+            "CalidadSoftware/mi_script.py:41:0: C0116: Missing function or method docstring (missing-function-docstring)\n",
+            "CalidadSoftware/mi_script.py:41:33: W0621: Redefining name 'data' from outer scope (line 97) (redefined-outer-name)\n",
+            "CalidadSoftware/mi_script.py:41:39: W0621: Redefining name 'mean' from outer scope (line 100) (redefined-outer-name)\n",
+            "CalidadSoftware/mi_script.py:62:0: C0116: Missing function or method docstring (missing-function-docstring)\n",
+            "CalidadSoftware/mi_script.py:62:0: E0102: function already defined line 45 (function-redefined)\n",
+            "CalidadSoftware/mi_script.py:77:0: C0116: Missing function or method docstring (missing-function-docstring)\n",
+            "CalidadSoftware/mi_script.py:82:4: W0621: Redefining name 'data' from outer scope (line 97) (redefined-outer-name)\n",
+            "CalidadSoftware/mi_script.py:83:9: W1514: Using open without explicitly specifying an encoding (unspecified-encoding)\n",
+            "CalidadSoftware/mi_script.py:91:4: W0101: Unreachable code (unreachable)\n",
+            "CalidadSoftware/mi_script.py:91:4: W0612: Unused variable 'file_names' (unused-variable)\n",
+            "CalidadSoftware/mi_script.py:93:17: E0602: Undefined variable 'file_names' (undefined-variable)\n",
+            "CalidadSoftware/mi_script.py:100:4: C0103: Constant name \"mean\" doesn't conform to UPPER_CASE naming style (invalid-name)\n",
+            "CalidadSoftware/mi_script.py:108:4: W0404: Reimport 'time' (imported line 4) (reimported)\n",
+            "CalidadSoftware/mi_script.py:109:0: W0404: Reimport 'os' (imported line 7) (reimported)\n",
+            "CalidadSoftware/mi_script.py:109:0: C0413: Import \"import os\" should be placed at the top of the module (wrong-import-position)\n",
+            "CalidadSoftware/mi_script.py:110:0: C0413: Import \"from datetime import datetime\" should be placed at the top of the module (wrong-import-position)\n",
+            "CalidadSoftware/mi_script.py:112:0: C0116: Missing function or method docstring (missing-function-docstring)\n",
+            "CalidadSoftware/mi_script.py:116:4: W0621: Redefining name 'base_path' from outer scope (line 9) (redefined-outer-name)\n",
+            "CalidadSoftware/mi_script.py:124:8: W0621: Redefining name 'file_name' from outer scope (line 93) (redefined-outer-name)\n",
+            "CalidadSoftware/mi_script.py:125:8: W0621: Redefining name 'file_path' from outer scope (line 94) (redefined-outer-name)\n",
+            "CalidadSoftware/mi_script.py:125:8: W0612: Unused variable 'file_path' (unused-variable)\n",
+            "CalidadSoftware/mi_script.py:108:4: C0412: Imports from package time are not grouped (ungrouped-imports)\n",
+            "CalidadSoftware/mi_script.py:109:0: C0412: Imports from package os are not grouped (ungrouped-imports)\n",
+            "CalidadSoftware/mi_script.py:5:0: W0611: Unused import sys (unused-import)\n",
+            "\n",
+            "-----------------------------------\n",
+            "Your code has been rated at 3.55/10\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
